// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Identify and quantify cost savings across Azure subscriptions by analyzing actual costs, utilization metrics, and generating actionable optimization recommendations. Use this skill when analyzing Azure spending, finding waste, rightsizing resources, or generating cost optimization reports.",
  "extractedKeywords": [
    "across",
    "actionable",
    "actual",
    "analyzing",
    "app service",
    "azure",
    "cli",
    "container",
    "cosmos",
    "cost",
    "costs",
    "finding",
    "function",
    "generating",
    "identify",
    "key vault",
    "mcp",
    "metrics",
    "monitor",
    "optimization",
    "quantify",
    "recommendations",
    "redis",
    "reports",
    "resources",
    "rightsizing",
    "savings",
    "skill",
    "spending",
    "sql",
    "storage",
    "subscriptions",
    "this",
    "utilization",
    "validation",
    "waste",
    "when",
  ],
  "name": "azure-cost-optimization",
}
`;

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "across",
  "actionable",
  "actual",
  "analyzing",
  "app service",
  "azure",
  "cli",
  "container",
  "cosmos",
  "cost",
  "costs",
  "finding",
  "function",
  "generating",
  "identify",
  "key vault",
  "mcp",
  "metrics",
  "monitor",
  "optimization",
  "quantify",
  "recommendations",
  "redis",
  "reports",
  "resources",
  "rightsizing",
  "savings",
  "skill",
  "spending",
  "sql",
  "storage",
  "subscriptions",
  "this",
  "utilization",
  "validation",
  "waste",
  "when",
]
`;
